--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Mea+Culpa&family=Playball&family=Vollkorn&display=swap" rel="stylesheet"> 
     <title>Menú Nochebuena</title>
   </head>
-  <body>
+  <body class="bg-black">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
