--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mea+Culpa&family=Playball&family=Vollkorn&display=swap" rel="stylesheet"> 
-    <title>Menú Nochebuena</title>
+    <title>Menú Fiestas</title>
   </head>
   <body class="bg-black">
     <noscript>You need to enable JavaScript to run this app.</noscript>
