--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -27,7 +27,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mea+Culpa&family=Playball&family=Vollkorn&display=swap" rel="stylesheet"> 
-    <title>Menú Fiestas</title>
+    <title>Menú Navidad</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
